practice/practicejune/section40/kubernetes_networking/network_policy/network-pol-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: network-policy
  labels:
    app: frontend
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
  namespace: network-policy
  labels:
    app: client
spec:
  containers:
    - name: alpine-c
      image: alpine
      command:
        - /bin/sh
      args:
        - '-c'
        - "sleep 3600"
